2002-12-28  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlElement.cs : quick fix for the incomplete patch of #35308 below.

2002-12-28  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlDocument.cs : removed inconsistent line-feed output.
	* XmlElement.cs, XmlTextWriter.cs :
		fixed for bugzilla 35308 (default ns output)
	* XmlWhitespace.cs : limited output only when preserving whitespace.

2002-12-24  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlAttribute.cs, XmlDocument.cs, XmlTextReader.cs:
		Implemented XmlTextReader.ReadAttributeValue().
		Added internal ReadAttributeNodeValue().
		Fixed XmlAttribute.InnerXml to use these methods.
	
	* XmlDocument.cs, XmlDocumentFragment.cs, XmlElement.cs, XmlNode.cs:
		Implemented XmlDocument.ReadNode() and removed ConstructDOM().
		Other changes are replacing them.

2002-12-24  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlDocument.cs: patch by Ville (fixed default PreserveWhitespace)

2002-12-21  Atsushi Enomoto <ginga@kit.hi-ho.ne.jp>

	* XmlElement.cs, XmlTextWriter.cs, XmlWriter.cs:
		patch by JD Conley <jconley@winfessor.com>.
		(Fix for xmlns attribute output.)

2002-12-05  Ville Palo <vi64p@koti.soon.fi>

	* XmlQualifiedName.cs: Little fix to ToString () -method

2002-12-04  Tim Haynes  <thaynes@openlinksw.com>

        * class/System.XML/System.Xml/XmlElement.cs: Made more refined
        checks on attributeNode to fix 32262.

2002-12-03  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* XmlDocument.cs (CreateNavigator(XmlNode)) : reverted
	* XmlTextWriter.cs (WriteStartElementInternal):
	  fixed when default namespace was specified, all descendants
	  fail to omit the default namespace declarations.
	* XmlAttribute.cs,
	  XmlDocument.cs,
	  XmlNode.cs (internal XmlLang/XmlSpace) : implemented(defined)
	* XmlAttribute.cs,
	  XmlDocumentFragment.cs,
	  XmlElement.cs (set_InnerXml): now uses XmlLang/XmlSpace
	* XmlElement.cs (set_IsEmpty) : implemented
	  (WriteTo) : removed my improper indenting (Writer already done)